# GeoWar-Pulse

./: BUILD_REPORT.md  QA_PRODUCTION_PLAN_AR.md  README.md  TEST_REPORT.md  backend_test.sh  pyproject.toml  test_backend.py  test_backend_simple.py
app/: __init__.py  api.py  main.py  models.py  scoring.py
db/: indexes.sql  schema.sql  seed.sql
docs/: API_CONTRACT.md  CONSTITUTION.md  DATA_MODEL.md  DATA_SOURCES_OPEN.md  EXECUTION_AUDIT.md  IMPLEMENTATION_PLAN.md  PHASE1_CHECKLIST.md  PLAN.md  PRD.md  RESEARCH_SIGNALS.md  RESEARCH_SOURCES.md  RESEARCH_UI.md  ROADMAP.md  ROADMAP_V2.md  SCORING_FRAMEWORK.md  SPEC.md  TASKS.md
frontend/: index.html  package-lock.json  package.json
frontend/src/: App.jsx  styles.css  utils.js
frontend/src/components/: CountryDetailPanel.jsx  HotspotsList.jsx  RiskLegend.jsx  RiskMap.jsx  RiskMapPlaceholder.jsx
frontend/src/data/: sampleApiResponse.js
frontend/src/hooks/: useApi.js
frontend/src/services/: api.js
geowar_pulse_backend.egg-info/: PKG-INFO  SOURCES.txt
